--- a/基础.md
+++ b/基础.md
@@ -1,2 +1,3 @@
 # 运算符
-![alt text](https://github.com/zhugegangtie007/Python/blob/main/%E5%BC%95%E7%94%A8%E5%9B%BE%E7%89%87/JPEG%E5%9B%BE%E5%83%8F-4FFC-BDFB-D2-0.jpeg)< img src="https://github.com/zhugegangtie007/Python/blob/main/%E5%BC%95%E7%94%A8%E5%9B%BE%E7%89%87/JPEG%E5%9B%BE%E5%83%8F-4FFC-BDFB-D2-0.jpeg" width="300" />
+![alt text](https://github.com/zhugegangtie007/Python/blob/main/%E5%BC%95%E7%94%A8%E5%9B%BE%E7%89%87/JPEG%E5%9B%BE%E5%83%8F-4FFC-BDFB-D2-0.jpeg)
+< img src="https://github.com/zhugegangtie007/Python/blob/main/%E5%BC%95%E7%94%A8%E5%9B%BE%E7%89%87/JPEG%E5%9B%BE%E5%83%8F-4FFC-BDFB-D2-0.jpeg" width="300"/>
