--- a/基础.md
+++ b/基础.md
@@ -1,2 +1,9 @@
-# 运算符
-![alt text width=1](https://github.com/zhugegangtie007/Python/blob/main/%E5%BC%95%E7%94%A8%E5%9B%BE%E7%89%87/JPEG%E5%9B%BE%E5%83%8F-4FFC-BDFB-D2-0.jpeg)
+# C5 运算符
+## 5.1.1 算术运算符
+  ![alt text width=1](https://github.com/zhugegangtie007/Python/blob/main/%E5%BC%95%E7%94%A8%E5%9B%BE%E7%89%87/JPEG%E5%9B%BE%E5%83%8F-4FFC-BDFB-D2-0.jpeg)
+  ect：
+  |符号|含义|
+  |---|---|
+  |+|字符串连接|
+  |*|重复输出字符串|
+  |%|格式化字符串|
