--- a/基础.md
+++ b/基础.md
@@ -1,6 +1,15 @@
 # C5 运算符
 ## 5.1.1 算术运算符
-  ![alt text width=1](https://github.com/zhugegangtie007/Python/blob/main/%E5%BC%95%E7%94%A8%E5%9B%BE%E7%89%87/JPEG%E5%9B%BE%E5%83%8F-4FFC-BDFB-D2-0.jpeg)
+  |运算符|运算功能|
+  |--|--|
+  |+|加|
+  |-|减|
+  |*|乘|
+  |**|幂|
+  |/|除|
+  |//|整除|
+  |%|取模（除法的余数）|
+  
   ect：
   |符号|含义|
   |---|---|
